# Kwaliteitsaanpak

./: .coverage  .dockerignore  .gitattributes  .gitignore  .pylintrc  .travis.yml  .vulture_white_list.py  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.wkhtmltopdf  ICTU-Kwaliteitsaanpak-Checklist.xlsx  ICTU-Kwaliteitsaanpak-Full.html  ICTU-Kwaliteitsaanpak-Full.md  ICTU-Kwaliteitsaanpak-Generic.html  ICTU-Kwaliteitsaanpak-Generic.md  ICTU-Kwaliteitsaanpak-ISR.html  ICTU-Kwaliteitsaanpak-ISR.md  README.md  SECURITY.md  changes.md  create-abbreviations-appendix.py  create-checklist.py  create-dictionary.py  create-docs.sh  docker-compose.yml  fix-toc.py  htmltopdf.js  keep-together.py  map.py  markdown-link-check.json  md-to-docx.py  package-lock.json  package.json  post-process-html.py  pyproject.toml  readme.md  requirements-dev.txt  requirements.txt  run-full.bat  (+2 more)
.circleci/: config.yml
.github/: dependabot.yml
Content/: Begrippenkader.md  Doelstellingen-tekst.md  Doelstellingen.md  Inleiding-tekst.md  Inleiding.md  Leeswijzer.md  Manifest-tekst.md  Manifest.md  Versie.md  Wijzigingsgeschiedenis.md
DocumentDefinitions/: README.md  compacte-voorfase.json  detailtestplan.json  generiek-template-neutral.json  generiek-template.json  globaal-functioneel-ontwerp.json  high-level-design.json  infrastructuurarchitectuur.json  inwerkplan-kwaliteitsmanager.json  kwaliteitsaanpak-samenvatting.json  kwaliteitsaanpak.json  kwaliteitsplan.json  mastertestplan.json  niet-functionele-eisen.json  plan-van-aanpak-realisatiefase.json  plan-van-aanpak-voorfase-producten.json  plan-van-aanpak-voorfase.json  projectvoorstel-realisatiefase.json  projectvoorstel-voorfase.json  reference beter.docx  reference-ictu.docx  reference-ictu.pptx  reference-neutral.docx  reference.docx  reference.pptx  reference2.docx  softwareachitectuurdocument.json  softwarearchitectuurdocument.json  tool-gids-dt.json  tool-gids-zap.json  tool-gids.json  variables.json  wijzigingsgeschiedenis.json  zip-archive.json
DotNetHelloWorld/: Hello world.docx  run.bat
ci/: quality.sh  unittest.sh
docs/: ICTU-Kwaliteitsaanpak-Checklist.xlsx  ICTU-Kwaliteitsaanpak.css  ICTU-Kwaliteitsaanpak.html  ICTU-Kwaliteitsaanpak.pptx  index.css  index.html
dotnet-helloword/: Dockerfile
dotnet-helloworld/: Hello world.docx  HelloWorldDotNet.csproj  HelloWorldDotNet.sln  Program.cs
mdconvert/: Alignment.cs  Context.cs  Dockerfile  DocumentFormat.cs  DocumentSettings.cs  DocumentType.cs  DocxBuilder.cs  ExportFormat.cs  HtmlBuilder.cs  IDocumentBuilder.cs  Markdown.cs  MarkdownBuilder.cs  MarkdownConverter.cs  MarkdownSyntax.cs  Program.cs  Tags.cs  TextAlignment.cs  XFragment.cs  XMLConverter.cs  XMLTags.cs  XParagraph.cs  XStyle.cs  XTable.cs  mdconvert.csproj  mdtodocx.sln
src/: builder.py  cli.py  convert.py  converter.py  custom_types.py  detailtestplan.json  docx_builder.py  html_builder.py  html_tags.py  hyperlink.py  markdown_builder.py  markdown_converter.py  markdown_syntax.py  markdown_table.py  pdfmark.txt  settings.json  table.py  table_of_contents.py  test.md  utils.py  xlsx_builder.py  xmltags.py
tests/: __init__.py  (+2 more)
(+756 files in other folders)
