[project]
name = "ictu-kwaliteitsaanpak"
version = "5.1.0"
requires-python = ">=3.14"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: 3.15",
]
dependencies = [
  "coverage==7.13.4",
  "lxml-stubs==0.5.1",
  "python-docx==1.2.0",
  "python-pptx==1.0.2",
  "vulture==2.14",
  "xlsxwriter==3.2.9",
]

[tool.mypy]
ignore_missing_imports = false
incremental = false
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
  "pptx",
  "pptx.util",
  "xlsxwriter",
]
ignore_missing_imports = true

[tool.md_dead_link_check]
exclude_links = [
  "#m01",
  "#m02",
  "#m04",
  "#m05",
  "#m07",
  "#m08",
  "#m10",
  "#m14",
  "#m16",
  "#m18",
  "#m19",
  "#m26",
  "#m27",
  "#m28",
  "#m29",
  "#m30",
  "#m32",
  "#m33",
  "#m34",
  "#relatie-met-nen-npr-5326",
  "#terminologie-en-afkortingen",
  "relaties-tussen-producten.png",
  "relaties-testproducten-agile.png",
]

[tool.ruff]
target-version = "py314"
line-length = 120
src = [
    "src",
]
