[project]
name = "ictu-kwaliteitsaanpak"
version = "5.2.0"
requires-python = ">=3.14"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: 3.15",
]
dependencies = [
  "coverage==7.13.5",
  "lxml-stubs==0.5.1",
  "python-docx==1.2.0",
  "python-pptx==1.0.2",
  "vulture==2.16",
  "xlsxwriter==3.2.9",
]

[tool.mypy]
ignore_missing_imports = false
incremental = false
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
  "docx",
  "pptx",
  "pptx.util",
  "xlsxwriter",
]
ignore_missing_imports = true

[tool.ruff]
target-version = "py314"
line-length = 120
src = [
    "src",
]
