[project]
name = "ictu-kwaliteitsaanpak"
version = "5.2.0"
requires-python = ">=3.14"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: 3.15",
]
dependencies = [
  "coverage==7.14.3",
  "lxml-stubs==0.5.1",
  "pygments==2.20.0",
  "pygments_better_html==0.1.6",
  "python-docx==1.2.0",
  "python-pptx==1.0.2",
  "types-Pygments==2.20.0.20260518",
  "vulture==2.16",
  "xlsxwriter==3.2.9",
]

[tool.mypy]
ignore_missing_imports = false
incremental = false
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
  "docx",
  "pptx",
  "pptx.util",
  "pygments_better_html",
  "xlsxwriter",
]
ignore_missing_imports = true

[tool.ruff]
target-version = "py314"
line-length = 120
src = [
    "src",
]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
fail_under = 48.54
precision = 2
skip_covered = true

[tool.uv]
exclude-newer = "7 days" # managed by Update-time — remove this comment to prevent Update-time from changing it
